cmake_minimum_required(VERSION 3.14)
project(Data_Structure C)

set(CMAKE_C_STANDARD 99)

add_executable(Data_Struture main.c Linear_List/list.h Linear_List/list.c Linear_List/vector.h Linear_List/vector.c Linear_List/stack.h Linear_List/stack.c Linear_List/queue.h Linear_List/queue.c Linear_List/pqueue.h Linear_List/pqueue.c Linked_List/node.h Linked_List/node.c Linked_List/linkedlist.h Linked_List/linkedlist.c Linked_List/NodeLib.h Linked_List/NodeLib.c Linked_List/linkedStack.h Linked_List/linkedStack.c Linked_List/linkedqueue.c Linked_List/linkedqueue.h Linked_List/clnkqueue.c Linked_List/clnkqueue.h Linked_List/cnode.c Linked_List/cnode.h Linked_List/dNode.c Linked_List/dNode.h Linked_List/Practice3.c Linked_List/Practice3.h Linked_List/WangDao2.c Linked_List/WangDao2.h String/String.c String/String.h Linked_List/WangDao3.c Linked_List/WangDao3.h Sort/sort.c Sort/sort.h)